@@ -9,6 +9,7 @@ copyright_holder = ZipRecruiter
 [AutoPrereqs]
 [Prereqs]
 perl = 5.012
+Data::Serializer::Sereal = 0
 [NextRelease]
 [OurPkgVersion]
 [PodWeaver]
