@@ -1,7 +1,8 @@
 Revision history for perl distribution LWPx-UserAgent-Role-Cached
 
 {{$NEXT}}
-
+    - use CHI's built-in serializer support by default (with Sereal) instead
+      of serializing in the UserAgent
 0.005     2015-02-17 22:59:02-05:00 America/New_York (TRIAL RELEASE)
     - add preliminary ETag cache control support
 0.004     2015-02-12 22:55:49-05:00 America/New_York
